--- a/client/src/pages/css/LandingPage.css
+++ b/client/src/pages/css/LandingPage.css
@@ -1,10 +1,27 @@
-pinkLink {
-  color: deeppink;
-  text-decoration: none;
-  font-size: 1.2rem;
+.btn-warning {
+  background-color: deeppink;
+  border-color: deeppink;
+  color: white;
+
+  font-size: 1.4rem;
 }
 
-root {
-  display: flex;
-  flex-direction: row;
+.btn-warning:hover {
+  background-color: rgb(250, 81, 171);
+  border-color: deeppink;
+  color: white;
+
+  font-size: 1.4rem;
+}
+
+.pinkLink {
+  color: deeppink;
+  text-decoration: none;
+  font-size: 1.4rem;
+}
+
+.pinkLink:hover {
+  color: deeppink;
+  text-decoration: none;
+  font-size: 1.4rem;
 }
